# gcp-data-pipelines

./: .gitignore  README.md
01-docker-terraform/: .dockerignore  .gitignore  docker-compose.yaml  pyproject.toml
01-docker-terraform/notebooks/: 01_local_ingestion.ipynb  01_postgres_test.ipynb  01_staging_to_postgres.ipynb  02_cloud_ingestion.ipynb  03_analytics_queries.ipynb
01-docker-terraform/src/01_docker_terraform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
01-docker-terraform/src/ingestion/: extract.py  load.py  main.py
01-docker-terraform/terraform/: .terraform.lock.hcl  main.tf  variables.tf
03-data-warehouse/: .gitignore  pyproject.toml
03-data-warehouse/scripts/: DLT_upload_to_GCP.ipynb  load_yellow_taxi_data.py
03-data-warehouse/sql/: 01_external_table.sql  02_native_table.sql  03_optimized_table.sql  04_homework_ans.sql
03-data-warehouse/terraform/: main.tf  variables.tf
04-analytics-engineering/: .gitignore  pyproject.toml
04-analytics-engineering/kestra/: Dockerfile  docker-compose.yml
04-analytics-engineering/kestra/flows/: ingest_trips.yml
04-analytics-engineering/kestra/scripts/: ingest_web_to_gcs.py
04-analytics-engineering/taxi_rides_ny/: dbt_project.yml
04-analytics-engineering/taxi_rides_ny/models/core/: fact_fhv_trips.sql  fact_trips.sql  schema.yml
04-analytics-engineering/taxi_rides_ny/models/staging/: schema.yml  sources.yml  stg_fhv_tripdata.sql  stg_green_tripdata.sql  (+1 more)
04-analytics-engineering/taxi_rides_ny/seeds/: schema.yml
04-analytics-engineering/terraform/: main.tf  variables.tf
(+32 files in other folders)
