[project]
name = "03-data-warehouse"
version = "0.1.0"
description = "Module 3: Data Warehouse"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[bigquery,duckdb,gs]>=1.21.0",
    "google-api-core>=2.29.0",
    "google-cloud-storage>=3.9.0",
    "jupyter>=1.1.1",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "python-hcl2>=7.3.1",
]
